@@ -22,16 +22,21 @@
 // Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301, USA
 //
 
+
 #ifndef MULEGIFCTRL_H
 #define MULEGIFCTRL_H
+
 
 #include <wx/control.h>
 #include <wx/timer.h>
 
+
 const int GIFTIMERID = 271283;
+
 
 class MuleGIFDecoder;
 class wxBitmap;
+
 
 /**
  * MuleGifCtrl is a simple widget for displaying a gif animation.
@@ -49,22 +54,31 @@ class wxBitmap;
  */
 class MuleGifCtrl : public wxControl
 {
+private:
+	//! A pointer to the current gif-animation.
+	MuleGIFDecoder *m_decoder;
+	//! Timer used for the delay between each frame.
+	wxTimer m_timer;
+	//! Current frame.
+	wxBitmap m_frame;
+	
 public:
 	/**
 	 * Contructor. See wxWindow class documentation for more information.
 	 */
-	MuleGifCtrl( wxWindow *parent, wxWindowID id, 
-	              const wxPoint& pos = wxDefaultPosition,
-                  const wxSize& size = wxDefaultSize,
-                  long style = 0,
-                  const wxValidator& validator = wxDefaultValidator,
-                  const wxString& name = wxControlNameStr );
-				  
+	MuleGifCtrl(
+		wxWindow *parent, wxWindowID id, 
+		const wxPoint& pos = wxDefaultPosition,
+		const wxSize& size = wxDefaultSize,
+		long style = 0,
+		const wxValidator& validator = wxDefaultValidator,
+		const wxString& name = wxControlNameStr);
+	
 	/**
 	 * Destructor
 	 */
 	virtual ~MuleGifCtrl();
-
+	
 	/**
 	 * This loads the gif image from a char-array with a specific size.
 	 *
@@ -86,25 +100,25 @@ public:
 	 * set and it's not a static image.
 	 */
 	void Start();
-
+	
 	/**
 	 * Stops the animation.
 	 */
 	void Stop();
-
+	
 	/**
 	 * Returns the prefered size of the widget.
 	 *
 	 * @return Prefered size, which is the size of the animation.
 	 */
 	virtual wxSize GetBestSize();
-
+	
 private:
 	/**
 	 * Timer function that selects the next frame in an animation.
 	 */
 	void OnTimer( wxTimerEvent& event );
-
+	
 	/**
 	 * Function for drawing the animation.
 	 * 
@@ -113,19 +127,12 @@ private:
 	 * ERASE_BACKGROUND events we avoid flickering on redraws.
 	 */
 	void OnPaint( wxPaintEvent& event );
-
+	
 	/**
 	 * This function is used to avoid flicker when redrawing.
 	 */
 	void OnErase( wxEraseEvent& WXUNUSED(event) ) {}
-
-	//! A pointer to the current gif-animation.
-	MuleGIFDecoder*	m_decoder;
-	//! Timer used for the delay between each frame.
-	wxTimer			m_timer;
-	//! Current frame.
-	wxBitmap		m_frame;
-    
+	
 	//! Enables the event functions OnErase(), OnTimer() and OnPaint().
 	DECLARE_EVENT_TABLE()
 };
